--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,32 @@ jobs:
             echo "Restarting bot..."
             sleep 3
           done
+
+      - name: Delete ONLY non-running workflow runs
+        run: |
+          TOKEN="${{ github.token }}"
+          REPO="${{ github.repository }}"
+          SELF="${{ github.run_id }}"
+
+          echo "This workflow ID = $SELF"
+
+          # Get all workflow runs
+          RUNS=$(curl -s -H "Authorization: token $TOKEN" \
+            "https://api.github.com/repos/$REPO/actions/runs" \
+            | jq -c '.workflow_runs[] | {id: .id, status: .status}')
+
+          for row in $RUNS; do
+            ID=$(echo "$row" | jq -r '.id')
+            STATUS=$(echo "$row" | jq -r '.status')
+
+            # Skip active workflows and this workflow itself
+            if [ "$STATUS" = "in_progress" ] || [ "$STATUS" = "queued" ] || [ "$ID" = "$SELF" ]; then
+              echo "Skipping $ID (status: $STATUS)"
+              continue
+            fi
+
+            echo "Deleting workflow run: $ID (status: $STATUS)"
+            curl -X DELETE -H "Authorization: token $TOKEN" \
+              "https://api.github.com/repos/$REPO/actions/runs/$ID"
+          done
+          
