--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
           done
 
       - name: Delete ONLY non-running workflow runs
+        if: always()
         run: |
           TOKEN="${{ github.token }}"
           REPO="${{ github.repository }}"
